updated job